--- a/TestStruts2/.settings/org.eclipse.wst.common.component
+++ b/TestStruts2/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="TestStruts2">
+    <wb-module deploy-name="Struts2_Hello_World">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resource"/>
-        <property name="context-root" value="TestStruts2"/>
-        <property name="java-output-path" value="/TestStruts2/build/classes"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Resources"/>
+        <property name="java-output-path" value="/Struts2_Hello_World/build/classes"/>
+        <property name="context-root" value="Struts2_Hello_World"/>
     </wb-module>
 </project-modules>
